--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -201,7 +201,8 @@
 <script src="https://www.webrtc-experiment.com/EBML.js"></script> 
 <script src="{% static 'app/scripts/RecordRTC.js' %}"></script>
 <script src="{% static 'app/scripts/stream_listener.js' %}"></script>
-<script src="{% static 'app/scripts/start_list.js' %}"></script>
+<script src="{% static 'app/scripts/sortable.min.js' %}?v=1.1"></script>
+<script src="{% static 'app/scripts/start_list.js' %}?v=1.1"></script>
 <script type="text/javascript">
     var Session = "{{session.id}}";
     var SessionName = "{{session}}";
@@ -286,7 +287,7 @@
     }
     SetupPage();
     if (LoadRot == '') {
-        SetupStream();
+        //SetupStream();
         var docRef = db.collection("sessions").doc(Session).collection("event_managers").doc(ev);
         docRef.get().then(function (doc) {
             if (doc.exists) {
@@ -345,7 +346,7 @@
         $("#modalBodyArea2").hide();
         $("#modalBodyArea1").empty();
         $("#modalBodyArea1").load("/athlete_start_list_admin/" + ev,  function () {
-
+            StartListDragSetup();
         });
 
         $("#modalBodyArea1").show();
