--- a/STSEval/app/templates/app/overview.html
+++ b/STSEval/app/templates/app/overview.html
@@ -64,7 +64,9 @@
 <script src="https://www.webrtc-experiment.com/EBML.js"></script> 
 <script type="module" src="{% static 'app/scripts/wowza/play.js' %}?v=1"></script>
 <script src="{% static 'app/scripts/stream_listener.js' %}?v=1.11"></script>
-<script src="{% static 'app/scripts/start_list.js' %}"></script>
+<script src="{% static 'app/scripts/sortable.min.js' %}?v=1.1"></script>
+<script src="{% static 'app/scripts/start_list.js' %}?v=1.1"></script>
+
 <script type="text/javascript">
 
     var ev = "{{event_name}}";
